// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Config Snapshots — Critical Rule Entries > core critical rule entries should match snapshot 1`] = `
{
  "eqeqeq": "warn",
  "no-undef": "warn",
  "no-unused-vars": [
    "error",
    {
      "args": "after-used",
      "argsIgnorePattern": "^_",
      "ignoreRestSiblings": true,
      "vars": "all",
      "varsIgnorePattern": "^_",
    },
  ],
  "simple-import-sort/imports": [
    "warn",
    {
      "groups": [
        [
          "^\\u0000",
        ],
        [
          "^node:",
          "^(assert|async_hooks|buffer|child_process|cluster|console|crypto|dgram|diagnostics_channel|dns|domain|events|fs|http|http2|https|inspector|module|net|os|path|perf_hooks|process|punycode|querystring|readline|repl|stream|string_decoder|sys|timers|tls|tty|url|util|v8|vm|wasi|worker_threads|zlib)(/.*|$)",
        ],
        [
          "^virtual:",
          "^astro:",
          "^\\$app/",
          "^\\$env/",
          "^\\$lib/",
          "^#imports",
          "^#build/",
          "^#app/",
        ],
        [
          "^(layouts?|pages?|templates?|organisms?|molecules?|atoms?|components?|ui|views?|screens?)/",
          "^(@/|~/)(layouts?|pages?|templates?|organisms?|molecules?|atoms?|components?|ui|views?|screens?)(/.*|$)",
        ],
        [
          "^(stores?|api|contexts?|hooks?|composables?|services?|lib|models?|utils?|helpers?|configs?|constants?|types?|plugins?|middlewares?|ws|assets?)/",
          "^(@/|~/)(stores?|api|contexts?|hooks?|composables?|services?|lib|models?|utils?|helpers?|configs?|constants?|types?|plugins?|middlewares?|ws|assets?)(/.*|$)",
        ],
        [
          "^.+\\.(css|scss|sass|less|styl|stylus|postcss)$",
        ],
        [
          "^@?\\w",
        ],
        [
          "^@/",
          "^~/",
          "^#",
        ],
        [
          "^\\.\\.(?!/?$)",
          "^\\.\\./?$",
        ],
        [
          "^\\./(?=.*/)(?!/?$)",
          "^\\.(?!/?$)",
          "^\\./?$",
        ],
      ],
    },
  ],
}
`;

exports[`Config Snapshots — Critical Rule Entries > preact critical rule entries should match snapshot 1`] = `
{
  "@eslint-react/exhaustive-deps": "warn",
  "@eslint-react/no-missing-key": "error",
  "@eslint-react/rules-of-hooks": "error",
}
`;

exports[`Config Snapshots — Critical Rule Entries > react critical rule entries should match snapshot 1`] = `
{
  "@eslint-react/exhaustive-deps": "warn",
  "@eslint-react/no-missing-key": "error",
  "@eslint-react/rules-of-hooks": "error",
  "react-compiler/react-compiler": "warn",
}
`;

exports[`Config Snapshots — Critical Rule Entries > typescript critical rule entries should match snapshot 1`] = `
{
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "fixStyle": "inline-type-imports",
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/no-explicit-any": "warn",
  "@typescript-eslint/no-unsafe-assignment": "warn",
  "@typescript-eslint/no-unused-vars": [
    "warn",
    {
      "args": "after-used",
      "argsIgnorePattern": "^_",
      "destructuredArrayIgnorePattern": "^_",
      "ignoreRestSiblings": true,
      "vars": "all",
      "varsIgnorePattern": "^_",
    },
  ],
}
`;

exports[`Config Snapshots — Entry Names > angular config entries should match snapshot 1`] = `
[
  "eslint-config-angular/rules",
]
`;

exports[`Config Snapshots — Entry Names > astro config entries should match snapshot 1`] = `
[
  "astro/base",
  "astro/base/javascript",
  "astro/base/plugin",
  "astro/base/typescript",
  "astro/recommended",
  "eslint-config-astro/custom",
  "eslint-config-astro/virtual-scripts",
]
`;

exports[`Config Snapshots — Entry Names > core config entries should match snapshot 1`] = `
[
  "@eslint/js/recommended",
  "@eslint/js/recommended/slots",
  "eslint-config/core-plugins",
  "eslint-config/custom-rules",
  "eslint-config/custom-rules/slots",
  "eslint-config/eslint-config-file-overrides",
  "eslint-config/plugins-rules",
  "eslint-config/plugins-rules/slots",
  "node/flat/recommended-module",
  "node/flat/recommended-module/slots",
  "promise/flat/recommended",
  "promise/flat/recommended/slots",
  "stylistic/recommended",
  "stylistic/recommended/slots",
]
`;

exports[`Config Snapshots — Entry Names > expo config entries should match snapshot 1`] = `
[
  "eslint-config-expo/custom",
]
`;

exports[`Config Snapshots — Entry Names > hono config entries should match snapshot 1`] = `
[
  "eslint-config-hono/runtime",
  "eslint-config-hono/server-handlers",
]
`;

exports[`Config Snapshots — Entry Names > lit config entries should match snapshot 1`] = `
[
  "eslint-config-lit/lit-recommended",
  "eslint-config-lit/wc-recommended",
]
`;

exports[`Config Snapshots — Entry Names > nest config entries should match snapshot 1`] = `
[
  "@darraghor/nestjs-typed/base",
  "@darraghor/nestjs-typed/recommended",
  "eslint-config-nest/custom",
]
`;

exports[`Config Snapshots — Entry Names > next config entries should match snapshot 1`] = `
[
  "eslint-config-next/custom",
  "eslint-config-next/ignores",
  "eslint-config-next/plugin",
]
`;

exports[`Config Snapshots — Entry Names > nuxt config entries should match snapshot 1`] = `
[
  "eslint-config-nuxt/rules",
  "eslint-config-nuxt/server-runtime",
]
`;

exports[`Config Snapshots — Entry Names > preact config entries should match snapshot 1`] = `
[
  "eslint-config-preact/custom",
  "eslint-config-preact/recommended",
]
`;

exports[`Config Snapshots — Entry Names > qwik config entries should match snapshot 1`] = `
[
  "eslint-config-qwik/rules",
  "eslint-config-qwik/virtual-script-rules",
]
`;

exports[`Config Snapshots — Entry Names > react config entries should match snapshot 1`] = `
[
  "eslint-config-react/custom",
  "eslint-config-react/recommended",
]
`;

exports[`Config Snapshots — Entry Names > react-router config entries should match snapshot 1`] = `
[
  "eslint-config-react-router/jsx-a11y",
  "eslint-config-react-router/virtual-script-rules",
]
`;

exports[`Config Snapshots — Entry Names > slidev config entries should match snapshot 1`] = `
[
  "eslint-config-slidev/deck-markdown",
  "eslint-config-slidev/runtime",
  "eslint-config-slidev/setup-files",
]
`;

exports[`Config Snapshots — Entry Names > solid config entries should match snapshot 1`] = `
[
  "eslint-config-solid/rules",
]
`;

exports[`Config Snapshots — Entry Names > svelte config entries should match snapshot 1`] = `
[
  "eslint-config-svelte/rules",
  "eslint-config-svelte/virtual-script-rules",
  "svelte:base:setup-for-svelte",
  "svelte:base:setup-for-svelte-script",
  "svelte:base:setup-plugin",
  "svelte:recommended:rules",
]
`;

exports[`Config Snapshots — Entry Names > tanstack-start config entries should match snapshot 1`] = `
[
  "eslint-config-tanstack-start/query",
  "eslint-config-tanstack-start/router",
]
`;

exports[`Config Snapshots — Entry Names > typescript config entries should match snapshot 1`] = `
[
  "eslint-config-typescript/astro-virtual-js-parser",
  "eslint-config-typescript/parser-setup",
  "eslint-config-typescript/parser-setup-slots",
  "eslint-config-typescript/setup",
  "eslint-config-typescript/standard-rules",
  "eslint-config-typescript/type-checked-rules",
  "eslint-config-typescript/virtual-parser-setup",
  "typescript-eslint/base",
  "typescript-eslint/base",
  "typescript-eslint/eslint-recommended",
  "typescript-eslint/eslint-recommended",
  "typescript-eslint/eslint-recommended/rules-only",
  "typescript-eslint/eslint-recommended/rules-only",
  "typescript-eslint/strict-type-checked",
  "typescript-eslint/strict-type-checked/rules-only",
  "typescript-eslint/stylistic-type-checked",
  "typescript-eslint/stylistic-type-checked/rules-only",
]
`;

exports[`Config Snapshots — Entry Names > vite config entries should match snapshot 1`] = `
[
  "eslint-config-vite/config-files",
  "eslint-config-vite/runtime",
]
`;

exports[`Config Snapshots — Entry Names > vue config entries should match snapshot 1`] = `
[
  "eslint-config-vue/rules",
  "eslint-config-vue/virtual-script-rules",
  "vue/base/setup",
  "vue/base/setup-for-vue",
  "vue/essential/rules",
  "vue/recommended/rules",
  "vue/strongly-recommended/rules",
]
`;
